<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kaichunlin.transition.app.MainActivity"
    android:gravity="top">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main_btns"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="top">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
                android:title="@string/app_name"
                app:title="@string/app_name"
                app:theme="@style/Toolbar" />

            <android.support.v7.widget.AppCompatButton
                style="@style/Button"
                android:id="@+id/slideup_actionbar"
                android:text="@string/title_slideing_up_panel" />

            <android.support.v7.widget.AppCompatButton
                style="@style/Button"
                android:id="@+id/slideup_rotate_image"
                android:text="@string/title_rotate_image" />

            <android.support.v7.widget.AppCompatButton
                style="@style/Button"
                android:id="@+id/gradient_actionbar"
                android:text="@string/title_drawer_gradient" />

            <android.support.v7.widget.AppCompatButton
                style="@style/Button"
                android:id="@+id/menuitem"
                android:text="@string/title_drawer_menuitem" />

            <android.support.v7.widget.AppCompatButton
                style="@style/Button"
                android:id="@+id/drawer"
                android:text="@string/title_drawer_view" />

            <android.support.v7.widget.AppCompatButton
                style="@style/Button"
                android:id="@+id/view_pager"
                android:text="@string/title_view_pager" />

            <android.support.v7.widget.AppCompatButton
                style="@style/Button"
                android:id="@+id/observable"
                android:text="ObservableScrollView" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>