<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoFadeColor="@android:color/transparent"
    sothree:umanoPanelHeight="68dp"
    sothree:umanoShadowHeight="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <ImageView
            android:id="@+id/content_bg2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/bg2"
            android:visibility="gone" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/content_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg" />

                <LinearLayout
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="64dp"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/rotate_slide"
                        style="@style/Button"
                        android:text="@string/slideup_rotate_slide" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/sliding_actionbar_view"
                        style="@style/Button"
                        android:text="@string/slideup_slide_actionbar_view" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/change_actionbar_color"
                        style="@style/Button"
                        android:text="@string/slideup_change_actionbar_color" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/change_actionbar_color_hsv"
                        style="@style/Button"
                        android:text="@string/slideup_change_actionbar_color_hsv" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/fading_actionbar"
                        style="@style/Button"
                        android:text="@string/slideup_fading_actionbar" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/rotating_actionbar"
                        style="@style/Button"
                        android:text="@string/slideup_rotate_actionbar" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/grayscale_bg"
                        style="@style/Button"
                        android:text="@string/slideup_grayscale" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/cascade_fading"
                        style="@style/Button"
                        android:text="@string/slideup_fading_buttons" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/cascade_rolling"
                        style="@style/Button"
                        android:text="@string/slideup_rolling_buttons" />
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:title="@string/title_slideing_up_panel"
            app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
            app:theme="@style/Toolbar"
            app:title="@string/title_slideing_up_panel" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:text="@string/slideup_panel"
        android:textSize="22sp" />
</com.sothree.slidinguppanel.SlidingUpPanelLayout>