<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kaichunlin.transition.app.DrawerMenuItemActivity">

    <View
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary" />

    <LinearLayout
        android:id="@+id/gradient"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">

        <View
            android:layout_height="?attr/actionBarSize"
            android:layout_width="0px"
            android:background="@color/drawer_opened"
            android:layout_weight="1" />

        <View
            android:layout_height="?attr/actionBarSize"
            android:layout_width="40dp"
            android:background="@drawable/gradient" />
    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="@null"
        android:title="@string/title_drawer_gradient"
        app:title="@string/title_drawer_gradient"
        app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
        app:theme="@style/Toolbar" />


    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:id="@+id/mainContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interpolator"
                android:textSize="24dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"/>
            <android.support.v7.widget.AppCompatButton
                style="@style/Button"
                android:id="@+id/interpolator_default"
                android:text="@string/interpolator_default"/>
            <android.support.v7.widget.AppCompatButton
                style="@style/Button"
                android:id="@+id/interpolator_linear"
                android:text="@string/interpolator_linear"/>
            <android.support.v7.widget.AppCompatButton
                style="@style/Button"
                android:id="@+id/interpolator_accelerate"
                android:text="@string/interpolator_accelerate"/>
            <android.support.v7.widget.AppCompatButton
                style="@style/Button"
                android:id="@+id/interpolator_decelerate"
                android:text="@string/interpolator_decelerate"/>
            <android.support.v7.widget.AppCompatButton
                style="@style/Button"
                android:id="@+id/interpolator_fastout"
                android:text="@string/interpolator_fastout_linearin"/>
            <android.support.v7.widget.AppCompatButton
                style="@style/Button"
                android:id="@+id/interpolator_anticipate"
                android:text="@string/interpolator_anticipate"/>
        </LinearLayout>

        <!-- Nav drawer -->

        <ListView
            android:id="@+id/drawerList"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="@android:color/white"
            android:divider="@android:color/white"
            android:dividerHeight="8dp"
            android:drawSelectorOnTop="true"
            android:headerDividersEnabled="true" />
    </android.support.v4.widget.DrawerLayout>
</RelativeLayout>